# fun-with-ascii-art

./: .gitignore  AsciiConverter.py  ImageObj.py  README.md  ascii_converter.py  constants.py  helper.py  html_settings.py  image_obj.py  my_ascii.py  pyproject.toml  tables.py  tile.py
fun_with_ascii_art/: ascii_converter.py  constants.py  exceptions.py  helper.py  my_ascii.py  tables.py  tile.py
